--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,39 @@
     android:background="@color/background_color"
     tools:context=".MainActivity" >
 
+    <EditText
+        android:id="@+id/editTextTextEmailAddress2"
+        android:layout_width="291dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edittext_border_gradient"
+        android:ems="10"
+        android:fontFamily="@font/popextralight"
+        android:hint="Введите пароль"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textColor="#5A5A5A"
+        android:textColorHint="#5A5A5A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/popregular"
+        android:text="Пароль"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="204dp"
@@ -28,8 +61,8 @@
         android:id="@+id/button"
         android:layout_width="219dp"
         android:layout_height="58dp"
-        android:layout_marginTop="532dp"
-        android:background="@drawable/gradient_button"
+        android:layout_marginTop="460dp"
+        android:background="@drawable/button"
         android:fontFamily="@font/popregular"
         android:text="Войти"
         android:textColor="#FFFFFF"
@@ -54,17 +87,20 @@
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="288dp"
-        android:layout_height="51dp"
+        android:layout_width="291dp"
+        android:layout_height="54dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittext_border_gradient"
         android:ems="10"
         android:fontFamily="@font/popextralight"
+        android:hint="Введите логин"
         android:inputType="textEmailAddress"
-        android:text="Введите логин"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:textColor="#5A5A5A"
+        android:textColorHint="#5A5A5A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
